--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_DB=Questionnaire
     ports:
       - 5432:5432
+    volumes:
+      - ${PWD}/db:/var/lib/postgresql/data
   web:
     init: true
     image: piis-web:0.1.0
